# mlops_lab6_mnist_dashboard

./: .gitignore  README.md  app.py  pyproject.toml  train.py
config/: config.py  settings.yaml
src/: data_loader.py  explainability.py  mlflow_utils.py  model.py  viz_utils.py
tabs/: dataset_exploration.py  error_analysis.py  prediction_explainability.py
